INCLUDES = -I./ -I../include -I../../include

noinst_LTLIBRARIES = libcontrol.la

libcontrol_la_SOURCES = initmgext.c treeview.c treeview.h monthcalendar.c monthcalendar.h \
                        spinbox.c spinbox.h coolbar.c coolbar.h listview.c listview.h \
                        grid.c grid.h
