INCLUDES = -I../../include -I../include -I../include/control

noinst_LTLIBRARIES = libcontrol.la

COMMON_SRCS = ctrlmisc.c \
              static.c button.c simedit.c edit.c medit.c listbox.c progressbar.c \
              toolbar.c menubutton.c trackbar.c combobox.c propsheet.c newtoolbar.c

libcontrol_la_SOURCES = $(COMMON_SRCS) 
