INCLUDES = -I../../include -I../include

noinst_LTLIBRARIES = libgui.la

EXTRA_DIST = de-latin1-nodeadkeys-kmap.c

libgui_la_SOURCES = accelkey.c caret.c ctrlclass.c dialog.c menu.c window.c  \
    keyboard.c keyboard.h linux_kd.h  linux_keyboard.h  linux_types.h \
    defkeymap.c fr-pc-kmap.c fr-kmap.c de-kmap.c de-latin1-kmap.c \
    it-kmap.c es-kmap.c es-cp850-kmap.c
