INCLUDES = -I../../include -I../include

noinst_LTLIBRARIES = libnewgdi.la

COMMON_SRCS = gdi.c attr.c clip.c map.c coor.c logfont.c rect.c  \
              palette.c readbmp.c icon.c screen.c bitmap.c \
              text.c drawtext.h drawtext.c pixel.c line.c arc.c pixel_ops.c pixel_ops.h \
              region.c generators.c polygon.c polygon.h flood.c \
              yuv.c

libnewgdi_la_SOURCES = $(COMMON_SRCS) 

