INCLUDES = -I../../include -I../include

noinst_LTLIBRARIES = libsysres.la

EXTRA_DIST= button-3d-bmp.c    checkmark-3d-bmp.c    downarrow-3d-bmp.c    updownarrow-3d-bmp.c \
           button-flat-bmp.c  checkmark-flat-bmp.c  downarrow-flat-bmp.c  updownarrow-flat-bmp.c \
           bmps-3d.c bmps-flat.c bmps-3d-ecos.c bmps-flat-ecos.c \
           cursors.c icons-flat.c icons-3d.c spinbox-3d-bmp.c spinbox-flat-bmp.c \
           fold-ico.c unfold-ico.c


libsysres_la_SOURCES = syscfg.c resource.c mgetc.c

