INCLUDES = -I../../../include -I../../include 

noinst_LTLIBRARIES = libnative.la

libnative_la_SOURCES = native.c native.h fb.c fb.h \
                       scr_fb.c qvfb.c qvfb.h ecoslcd.c \
                       genfunc.c genfunc_clipline.c \
                       fblin32.c fblin16.c fblin8.c fblin4.c fblin-4.c fblin2.c fblin-2.c fblin1.c fblin-1.c \
                       fbvga16.c fbvga16.h
